--- a/vehicle-api-local.yml
+++ b/vehicle-api-local.yml
@@ -1,5 +1,8 @@
-spring:
+server:
+  port: 9001
 
+spring:
+  profiles: local  
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/demo_vehicle?autoReconnect=true&useUnicode=true&characterEncoding=utf8
