--- a/common-api-local.yml
+++ b/common-api-local.yml
@@ -1,7 +1,8 @@
 server:
  port: 9002
- 
+
 spring:
+  profiles: local  
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/demo_common?autoReconnect=true&useUnicode=true&characterEncoding=utf8
